--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
         "@blocknote/shadcn": "^0.26.0",
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/utilities": "^3.2.2",
-
         "@genkit-ai/googleai": "^1.16.1",
         "@gradio/client": "^1.17.1",
         "@hookform/resolvers": "^4.1.3",
@@ -78,6 +77,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
+        "compression": "^1.8.1",
         "cors": "^2.8.5",
         "date-fns": "^4.1.0",
         "date-fns-tz": "^3.1.3",
@@ -112,13 +112,13 @@
         "react-icons": "^5.5.0",
         "react-leaflet": "^5.0.0",
         "react-markdown": "^10.1.0",
+        "react-minimal-pie-chart": "^9.1.1",
         "react-resizable-panels": "^2.1.9",
         "react-responsive-masonry": "^2.7.1",
         "react-rewards": "^2.1.0",
         "react-router": "^7.8.1",
         "react-router-dom": "npm:react-router@^7.8.1",
         "react-svg": "^16.3.0",
-        "react-minimal-pie-chart": "^9.1.1",
         "remark-gfm": "^4.0.1",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
@@ -141,6 +141,7 @@
         "@faker-js/faker": "^9.9.0",
         "@tailwindcss/vite": "^4.1.12",
         "@types/body-parser": "^1.19.6",
+        "@types/compression": "^1.8.1",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
         "@types/image-blob-reduce": "^4.1.4",
@@ -153,7 +154,6 @@
         "@types/pluralize": "^0.0.33",
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
-
         "@types/supertest": "^6.0.3",
         "@types/three": "^0.175.0",
         "@vitejs/plugin-react": "^4.7.0",
@@ -171,6 +171,9 @@
     },
     "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b",
     "pnpm": {
-        "hoistPattern": ["@types/*", "typescript"]
+        "hoistPattern": [
+            "@types/*",
+            "typescript"
+        ]
     }
 }
