--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage",
         "test:server": "jest --testPathPatterns=src/server",
-        "test:client": "jest --testPathPatterns=src/client"
+        "test:client": "jest --testPathPatterns=src/client",
+        "mock-inat": "./scripts/enable-mock-mode.sh",
+        "seed:mock": "tsx src/server/scripts/seed-quests-mock.ts"
     },
     "dependencies": {
         "@ai-sdk/google": "^1.2.22",
@@ -171,9 +173,6 @@
     },
     "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b",
     "pnpm": {
-        "hoistPattern": [
-            "@types/*",
-            "typescript"
-        ]
+        "hoistPattern": ["@types/*", "typescript"]
     }
 }
