--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "test:server": "jest --testPathPatterns=src/server",
         "test:client": "jest --testPathPatterns=src/client",
         "mock-inat": "./scripts/enable-mock-mode.sh",
-        "seed:mock": "tsx src/server/scripts/seed-quests-mock.ts"
+        "seed:mock": "tsx src/server/scripts/seed-quests-mock.ts",
+        "prepare": "husky"
     },
     "dependencies": {
         "@ai-sdk/google": "^1.2.22",
@@ -164,6 +165,7 @@
         "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
         "dbmate": "^2.28.0",
         "globals": "^15.15.0",
+        "husky": "^9.1.7",
         "jest": "^30.1.1",
         "nodemon": "^3.1.10",
         "supertest": "^7.1.4",
