--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "typecheck:client": "tsc --noEmit -p src/client/tsconfig.json",
         "typecheck:server": "tsc --noEmit -p src/server/tsconfig.json",
         "typecheck": "pnpm run typecheck:client && pnpm run typecheck:server",
-        "dev": "NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
+        "dev": "NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec \"tsx src/server/server.ts\" --",
         "start:preview": "NODE_ENV=production tsx src/server/server.ts",
         "start": "NODE_ENV=production node dist/server/server.js",
         "build": "NODE_ENV=production rm -rf dist && vite build && tsc -p src/server/tsconfig.json && tsc-alias -p src/server/tsconfig.json",
@@ -29,39 +29,33 @@
         "test:client": "jest --testPathPatterns=src/client",
         "mock-inat": "./scripts/enable-mock-mode.sh",
         "seed:mock": "tsx src/server/scripts/seed-quests-mock.ts",
-        "prepare": "husky"
+        "prepare": "husky",
+        "dev:debug": "DEBUG=app:* NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
+        "dev:server": "DEBUG=app:server:* NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
+        "dev:client": "DEBUG=app:client:* NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
+        "dev:events": "DEBUG=app:client:events NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --"
     },
     "dependencies": {
         "@hookform/resolvers": "^4.1.3",
         "@paralleldrive/cuid2": "^2.2.2",
         "@radix-ui/react-accordion": "^1.2.12",
-
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-checkbox": "^1.3.3",
-
         "@radix-ui/react-dialog": "^1.1.15",
-
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-menubar": "^1.1.16",
-
         "@radix-ui/react-popover": "^1.1.15",
-
         "@radix-ui/react-select": "^2.2.6",
-
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-switch": "^1.2.6",
-
         "@radix-ui/react-toggle-group": "^1.1.11",
         "@radix-ui/react-tooltip": "^1.2.8",
         "@radix-ui/react-visually-hidden": "^1.2.3",
-
         "@tanstack/react-query": "^5.85.5",
         "@tanstack/react-table": "^8.21.3",
-
         "animal-avatar-generator": "^1.2.0",
         "axios": "1.11.0",
         "bcrypt-ts": "^6.0.0",
-
         "chalk": "^5.6.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -70,12 +64,11 @@
         "cors": "^2.8.5",
         "date-fns": "^4.1.0",
         "date-fns-tz": "^3.1.3",
+        "debug": "^4.4.1",
         "dotenv": "^16.6.1",
-
         "express": "^5.1.0",
         "express-rate-limit": "^8.0.1",
         "express-slow-down": "^3.0.0",
-
         "ioredis": "^5.7.0",
         "jsonwebtoken": "^9.0.2",
         "jwt-decode": "^4.0.0",
@@ -88,32 +81,24 @@
         "next-themes": "^0.4.6",
         "node-cache": "^5.1.2",
         "node-emoji": "^2.2.0",
-
         "rate-limiter-flexible": "^7.2.0",
         "react": "^19.1.1",
-
         "react-dom": "^19.1.1",
         "react-hook-form": "^7.62.0",
         "react-icons": "^5.5.0",
         "react-leaflet": "^5.0.0",
-
         "react-minimal-pie-chart": "^9.1.1",
-
         "react-router": "^7.8.1",
         "react-router-dom": "npm:react-router@^7.8.1",
         "react-svg": "^16.3.0",
-
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.12",
-
         "tsc-alias": "^1.8.16",
         "tsx": "^4.20.4",
         "typescript": "^5.9.2",
         "uuid": "^11.1.0",
-
         "vite-express": "^0.21.1",
-
         "winston": "^3.17.0",
         "zod": "3.25.39"
     },
@@ -121,32 +106,26 @@
         "@biomejs/biome": "2.0.5",
         "@faker-js/faker": "^9.9.0",
         "@tailwindcss/vite": "^4.1.12",
-
         "@types/compression": "^1.8.1",
         "@types/cors": "^2.8.19",
+        "@types/debug": "^4.1.12",
         "@types/express": "^5.0.3",
-
         "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/leaflet": "^1.9.20",
         "@types/lodash": "^4.17.20",
         "@types/node": "^22.17.2",
-
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
-
         "@vitejs/plugin-react": "^4.7.0",
-
         "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
         "dbmate": "^2.28.0",
         "globals": "^15.15.0",
         "husky": "^9.1.7",
         "jest": "^30.1.1",
         "nodemon": "^3.1.10",
-
         "ts-jest": "^29.4.1",
         "tw-animate-css": "^1.3.7",
-
         "vite": "^6.3.5"
     },
     "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b",
