--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "test:client": "jest --testPathPatterns=src/client",
         "mock-inat": "./scripts/enable-mock-mode.sh",
         "seed:mock": "tsx src/server/scripts/seed-quests-mock.ts",
-        "prepare": "husky",
+        "prepare": "is-ci || husky",
         "dev:debug": "DEBUG=app:* NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
         "dev:server": "DEBUG=app:server:* NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
         "dev:client": "DEBUG=app:client:* NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
@@ -122,6 +122,7 @@
         "dbmate": "^2.28.0",
         "globals": "^15.15.0",
         "husky": "^9.1.7",
+        "is-ci": "^4.1.0",
         "jest": "^30.1.1",
         "nodemon": "^3.1.10",
         "ts-jest": "^29.4.1",
@@ -130,6 +131,9 @@
     },
     "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b",
     "pnpm": {
-        "hoistPattern": ["@types/*", "typescript"]
+        "hoistPattern": [
+            "@types/*",
+            "typescript"
+        ]
     }
 }
